--- a/styles.css
+++ b/styles.css
@@ -62,6 +62,60 @@ header {
     color: #C23373;
 }
 
+.nav_links li a.active {
+    background-color: #b3698a;
+}
+
+.nav_links li .menu {
+    display:none;
+}
+
+.menu {
+    display: none;
+    cursor: pointer;
+    font-size: 24px;
+    margin-right: auto;
+}
+
+/* adjust the nav bar size */
+@media screen and (max-width: 600px) {
+
+
+    .nav_links li a {
+        display: none;
+    }
+
+    .nav_links li a.menu {
+      /* float: right; */
+      margin-right: auto;
+      display: inline-block;
+    }
+    
+    .nav_links li.responsive {
+        position: relative;
+        top: 100%;
+    }
+
+    .nav_links li.responsive a.menu {
+        position: absolute;
+        z-index: 2;
+        /* top: 20px; */
+    }
+
+    .nav_links li.responsive a:not(:last-child) {
+        z-index: 1;
+        flex-direction: column; /* Display menu items in a column */
+        align-items: flex-start;
+        padding: 10px; /* Add padding for spacing */
+        border: 1px solid #ddd;
+        float: none;
+        display: block;
+        text-align: center;
+        /* position: absolute; */
+    }
+}
+
+
 button {
     margin-left: 10px;
     padding: 9px 25px;
@@ -82,5 +136,4 @@ button:hover {
     /* margin-right: auto; */
     float: right;
     line-height: 80px;
-
 }
