--- a/css/crud_styles.css
+++ b/css/crud_styles.css
@@ -6,7 +6,8 @@
     display: inline-block;
     font-size: 16px;
     border-radius: 45%;
-    background-color: pink;
+    background-color: #C72961;
+    color: white;
 }
 #search-bar-input, #search-bar-input-stacked {
     width: 0;
@@ -22,7 +23,6 @@
     border: 1px solid #ccc;
     padding: 5px 5px;
     margin-bottom: 10px;
-    /* margin-top: 10px; */
     transition: width 0.3s;
     border-radius: 10px;
 }
@@ -33,7 +33,7 @@
     color: #2a2e34;
 }
 #logout:hover, #logoutC:hover {
-    color: pink;
+    color: #C72905;
 }
 #loginC, #logout {
     color: #2a2e34;
@@ -48,7 +48,7 @@
 }
 
 #loginC:hover {
-    color: pink;
+    color: #C72905;
 }
 
 .table th {
@@ -114,7 +114,7 @@
         display: none;
     }
     .name {
-        background-color: rgb(56, 56, 56);
+        background-color: #008081;
         color: white;
     }
     .name-container {
